--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@ div {
   height: 50px;
   border: 1px solid red;
 }
+
+.row:before {
+  display: table;
+  content: "";
+}
+
+.row:after {
+  display: table;
+  content: "";
+  clear: both;
+} 
