--- a/style.css
+++ b/style.css
@@ -11,6 +11,61 @@
   width: 8.33333333%;
 }
 
+.col-2 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-3 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-4 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-5 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-6 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-7 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-8 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-9 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-10 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-11 {
+  float: left;
+  width: 8.33333333%;
+}
+
+.col-12 {
+  float: left;
+  width: 8.33333333%;
+}
+
 div {
   height: 50px;
   border: 1px solid red;
