--- a/style.css
+++ b/style.css
@@ -13,57 +13,57 @@
 
 .col-2 {
   float: left;
-  width: 8.33333333%;
+  width: 16.66666666%;
 }
 
 .col-3 {
   float: left;
-  width: 8.33333333%;
+  width: 25%;
 }
 
 .col-4 {
   float: left;
-  width: 8.33333333%;
+  width: 33.33333333%;
 }
 
 .col-5 {
   float: left;
-  width: 8.33333333%;
+  width: 41.666666%;
 }
 
 .col-6 {
   float: left;
-  width: 8.33333333%;
+  width: 50%;
 }
 
 .col-7 {
   float: left;
-  width: 8.33333333%;
+  width: 58.33333333%;
 }
 
 .col-8 {
   float: left;
-  width: 8.33333333%;
+  width: 66.6666666%;
 }
 
 .col-9 {
   float: left;
-  width: 8.33333333%;
+  width: 75%;
 }
 
 .col-10 {
   float: left;
-  width: 8.33333333%;
+  width: 83.33333333%;
 }
 
 .col-11 {
   float: left;
-  width: 8.33333333%;
+  width: 91.6666666%;
 }
 
 .col-12 {
   float: left;
-  width: 8.33333333%;
+  width: 100%;
 }
 
 div {
